--- a/ListeningTool/Base.lproj/MainMenu.xib
+++ b/ListeningTool/Base.lproj/MainMenu.xib
@@ -76,9 +76,10 @@
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="Help" systemMenu="help" id="F2S-fz-NVQ">
                         <items>
-                            <menuItem title="ListeningTool Help" keyEquivalent="?" id="FKE-Sm-Kum">
+                            <menuItem title="About ListeningTool" id="62w-f6-Yza">
+                                <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
-                                    <action selector="showHelp:" target="-1" id="y7X-2Q-9no"/>
+                                    <action selector="orderFrontStandardAboutPanel:" target="-1" id="0B8-8I-akQ"/>
                                 </connections>
                             </menuItem>
                         </items>
