--- a/ListeningTool/Base.lproj/MainMenu.xib
+++ b/ListeningTool/Base.lproj/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6254" systemVersion="14A389" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" customObjectInstantitationMethod="direct">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6254"/>
     </dependencies>
@@ -17,6 +17,7 @@
                 <outlet property="btnNext" destination="fag-ft-l1A" id="peO-il-uhd"/>
                 <outlet property="btnPaly" destination="vJE-Ob-VoS" id="vmH-Sb-spR"/>
                 <outlet property="btnPrevious" destination="srW-YL-FrS" id="PRb-ui-lqn"/>
+                <outlet property="btnRewind" destination="xIE-wg-BTd" id="VSe-m0-Dza"/>
                 <outlet property="labelProcess" destination="BGw-UT-pE9" id="3ic-CG-wWA"/>
                 <outlet property="labelText" destination="35w-Tp-9Pb" id="P5x-xy-cj6"/>
                 <outlet property="textInput" destination="h43-XF-Nwb" id="YHt-rU-DC9"/>
@@ -96,10 +97,10 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="35w-Tp-9Pb">
-                        <rect key="frame" x="20" y="100" width="623" height="17"/>
+                        <rect key="frame" x="22" y="100" width="623" height="17"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" controlSize="mini" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="请用快捷键 cmd + o 打开mp3文件。" id="gX7-3l-9FY">
-                            <font key="font" metaFont="system"/>
+                            <font key="font" size="13" name="CourierNewPSMT"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
@@ -108,7 +109,7 @@
                         <rect key="frame" x="20" y="70" width="621" height="22"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="YET-J1-mow">
-                            <font key="font" metaFont="system"/>
+                            <font key="font" size="13" name="CourierNewPSMT"/>
                             <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
@@ -152,8 +153,30 @@
                             <action selector="btnPrevious:" target="Voe-Tx-rLC" id="eum-u0-1nk"/>
                         </connections>
                     </button>
-                    <button verticalHuggingPriority="750" id="w5V-yP-uqE">
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="BGw-UT-pE9">
+                        <rect key="frame" x="564" y="31" width="79" height="17"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
+                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="0/0" id="8LR-PC-1Ee">
+                            <font key="font" metaFont="system"/>
+                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
+                    <button verticalHuggingPriority="750" id="xIE-wg-BTd">
                         <rect key="frame" x="202" y="22" width="62" height="32"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <buttonCell key="cell" type="push" title="首句" bezelStyle="rounded" alignment="center" enabled="NO" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="I4X-hj-aql">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                            <string key="keyEquivalent">n</string>
+                            <modifierMask key="keyEquivalentModifierMask" command="YES"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="btnRewind:" target="Voe-Tx-rLC" id="gzw-0W-5id"/>
+                        </connections>
+                    </button>
+                    <button verticalHuggingPriority="750" id="w5V-yP-uqE">
+                        <rect key="frame" x="264" y="22" width="62" height="32"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="push" title="显示" bezelStyle="rounded" alignment="center" enabled="NO" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="w4F-2t-oE9">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -165,15 +188,6 @@
                             <action selector="btnDisplay:" target="Voe-Tx-rLC" id="9QQ-fG-FXx"/>
                         </connections>
                     </button>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="BGw-UT-pE9">
-                        <rect key="frame" x="564" y="31" width="79" height="17"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
-                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="0/0" id="8LR-PC-1Ee">
-                            <font key="font" metaFont="system"/>
-                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
-                    </textField>
                 </subviews>
             </view>
             <point key="canvasLocation" x="556.5" y="370.5"/>
